[project]
name = "class-5-to-9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agents>=1.4.0",
    "fastapi>=0.118.0",
    "openai>=1.109.1",
    "openai-agents>=0.2.8",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.37.0",
]
